# Card-game-side-project-Home-

./: README.md  pyproject.toml
card_game_side_project/: Card.py  Hand.py
